k8s/booksonic/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booksonic
  labels:
    app: booksonic
    version: latest
    type: third-party
    facing: internal
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: booksonic
  template:
    metadata:
      labels:
        app: booksonic
    spec:
      containers:
        - name: booksonic
          image: linuxserver/booksonic:latest
          ports:
            - name: "webui"
              containerPort: 4040
              protocol: TCP
          volumeMounts:
            - name: audiobooks
              mountPath: /books
            - name: podcasts
              mountPath: /podcasts
            - name: config
              mountPath: /config
          resources:
            requests:
              memory: '128Mi'
              cpu: '100m'
            limits:
              memory: '1024Mi'
              cpu: '1500m'
      volumes:
        - name: audiobooks
          nfs:
            server: 192.168.1.240
            path: "/rpool/media/Audio/Audiobooks"
            readOnly: false
        - name: podcasts
          nfs:
            server: 192.168.1.240
            path: "/rpool/media/Audio/Podcasts"
            readOnly: false
        - name: config
          nfs:
            server: 192.168.1.240
            path: "/rpool/config/booksonic"
            readOnly: false
