k8s/booksonic/service.yml
apiVersion: v1
kind: Service
metadata:
  name: booksonic
  labels:
    app: booksonic
spec:
  selector:
    app: booksonic
  ports:
    - name: "webui"
      protocol: TCP
      targetPort: 4040
      port: 4040
