k8s/booksonic/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: booksonic
spec:
  rules:
  - host: booksonic.server.lemira
    http:
      paths:
      - path: /
        backend:
          serviceName: booksonic
          servicePort: 4040
